[package]
name = "kernel_keyring"
version = "0.1.0"
authors = ["Aetf <aetf@unlimited-code.works>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
errno = "0.2.7"
keyutils = { git = "https://github.com/mathstuf/rust-keyutils.git" }
libc = "0.2.90"
log = "0.4.14"
pamsm = { path = "../pam_sm_rust", features=["libpam"] }
syslog = "5.0.0"

[lib]
crate-type = [ "cdylib" ]
